3.4.3/_sources/gallery/event_handling/keypress_demo.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/event_handling/keypress_demo.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_event_handling_keypress_demo.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_event_handling_keypress_demo.py:


==============
Keypress event
==============

Show how to connect to keypress events.

.. GENERATED FROM PYTHON SOURCE LINES 8-33



.. image:: /gallery/event_handling/images/sphx_glr_keypress_demo_001.png
    :alt: Press a key
    :class: sphx-glr-single-img





.. code-block:: default

    import sys
    import numpy as np
    import matplotlib.pyplot as plt


    def on_press(event):
        print('press', event.key)
        sys.stdout.flush()
        if event.key == 'x':
            visible = xl.get_visible()
            xl.set_visible(not visible)
            fig.canvas.draw()


    # Fixing random state for reproducibility
    np.random.seed(19680801)

    fig, ax = plt.subplots()

    fig.canvas.mpl_connect('key_press_event', on_press)

    ax.plot(np.random.rand(12), np.random.rand(12), 'go')
    xl = ax.set_xlabel('easy come, easy go')
    ax.set_title('Press a key')
    plt.show()


.. _sphx_glr_download_gallery_event_handling_keypress_demo.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: keypress_demo.py <keypress_demo.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: keypress_demo.ipynb <keypress_demo.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
